[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.22.0",
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.14.2",
    "deep-translator>=1.11.4",
    "feedparser>=6.0.12",
    "langdetect>=1.0.9",
    "lxml>=6.0.2",
]
